force-app/main/default/objects/Insert_Add__c/Insert_Add__c.object-meta.xml
<CustomObject>
    <label>Insert Add</label>
    <nameField>
        <label>Add Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insert Adds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>