force-app/main/default/objects/Insert_Add__c/fields/Add_Id__c.field-meta.xml
<CustomField>
    <fullName>Add_Id__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Add ID</label>
    <type>AutoNumber</type>
</CustomField>