force-app/main/default/objects/Insert_Add__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <referenceTo>Show_Client__c</referenceTo>
    <relationshipLabel>Insert Adds</relationshipLabel>
    <relationshipName>Insert_Adds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>