force-app/main/default/objects/Insert_Add__c/fields/No_of_Clicks__c.field-meta.xml
<CustomField>
    <fullName>No_of_Clicks__c</fullName>
    <label>No of Clicks</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>