force-app/main/default/objects/Insert_Add__c/fields/Upload_Add__c.field-meta.xml
<CustomField>
    <fullName>Upload_Add__c</fullName>
    <label>Upload Add</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>